# timevault

./: .gitignore  AGENTS.md  COMPATIBILITY.md  Cargo.toml  PACKAGING.md  README.md  USER_GUIDE.md  gbackup.php  timevault.c  timevault.cpp  timevault.example.yaml  timevault.service  timevault.test.yaml  timevault.timer  timevault.yaml
.github/workflows/: ci.yml  release.yml
debian/: postinst  postrm  prerm
legacy/: timevault.c  timevault.cpp  timevault.rs
scripts/: build-deb.sh  compat-smoke.sh
src/: command.rs  configuration.rs  data.rs  error.rs  lib.rs  main.rs  mount.rs  signal_handler.rs  types.rs
src/backup/: mod.rs  pristine.rs  report.rs  rsync.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: backup.rs  disk_add.rs  disk_check.rs  disk_df.rs  disk_du.rs  disk_inspect.rs  disk_ls.rs  mod.rs  mount.rs  umount.rs  wake.rs
src/config/: load.rs  model.rs  save.rs
src/disk/: discovery.rs  fs_type.rs  identity.rs  mod.rs
src/mount/: guard.rs  inspect.rs  mod.rs  ops.rs  signals.rs
src/util/: command.rs  mod.rs  paths.rs
