[package]
name = "timevault"
version = "0.1.1"
edition = "2024"
description = "Safe rsync-based backup tool with mount validation and snapshot rotation"
license = "GPL-3.0-or-later"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
signal-hook = "0.3"
walkdir = "2"
clap = {version="4.5.53", features=["derive"]}

[package.metadata.deb]
maintainer = "Timevault Maintainers"
depends = "rsync, util-linux, coreutils"
assets = [
  ["target/release/timevault", "usr/bin/timevault", "755"],
  ["timevault.example.yaml", "usr/share/doc/timevault/timevault.example.yaml", "644"],
  ["timevault.service", "lib/systemd/system/timevault.service", "644"],
  ["timevault.timer", "lib/systemd/system/timevault.timer", "644"],
  ["README.md", "usr/share/doc/timevault/README.md", "644"],
  ["LICENSE", "usr/share/doc/timevault/LICENSE", "644"],
]
maintainer-scripts = "debian"
